# crypt-key

./: .gitignore  LICENSE  Makefile  README.md  gui.py  password_manager
doc/: CHANGELOG.md  DESIGN.md  TODO.md
gui/: CMakeLists.txt  FrontEnd.py
gui/CryptKey/: CMakeLists.txt  mainwindow.ui
include/: FileHandler.h  PasswordGenerator.h
src/: FileHandler.cpp  FileHandler.h  PasswordGenerator.cpp  main.cpp
test/: test_FileHandler.cpp  test_PasswordGenerator.cpp
